saturn/src/net/ninecube/saturn/ast/RuleParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. RuleParser.java */
package net.ninecube.saturn.ast;
import java.math.*;
import java.util.*;


import org.apache.commons.logging.Log;
import org.apache.commons.logging.LogFactory;

import net.ninecube.saturn.*;
import net.ninecube.saturn.exception.*;

@SuppressWarnings("unchecked")
public class RuleParser/*@bgen(jjtree)*/implements RuleParserTreeConstants, RuleParserConstants {/*@bgen(jjtree)*/
  protected JJTRuleParserState jjtree = new JJTRuleParserState();
  protected static Log log = LogFactory.getLog(RuleParser.class);
  private List<Exception> exceptions = new ArrayList<Exception>();
  public RuleParser(String s) {
    this(new java.io.StringReader(s));
  }

  public void ReInit(String s) {
    ReInit(new java.io.StringReader(s));
  }

  public Start parse(Context context) {
    try{
          Start();
    }catch(Exception exc){
      exceptions.add(new RuleSyntaxException(exc.getMessage(),exc));
   }
   Start node =  (Start)jjtree.rootNode();
   log.debug("node : " + ((SimpleNode) node).getDumpStr());
   if(node !=null && context != null)
        node.validate(context,exceptions);
    if(!exceptions.isEmpty())  throw new RuleSyntaxExceptions(exceptions);
      return node;
  }

  public Filter parseFilter(Context context) {
    try{
          Filter();
    }catch(Exception exc){
      exceptions.add(new RuleSyntaxException(exc.getMessage(),exc));
    }
   Filter node  = null;
   if(jjtree.nodeArity() > 0 ) node =  (Filter)jjtree.rootNode();
   if(node !=null && context != null)
        node.validate(context,exceptions);
    if(!exceptions.isEmpty())  throw new RuleSyntaxExceptions(exceptions);
      return node;
  }

  final public void Start() throws ParseException {
 /*@bgen(jjtree) Start */
  Start jjtn000 = new Start(this, JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CRLF:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(CRLF);
      }
      RegularRuleRegion();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        CycleRuleRegion();
      }
      jj_consume_token(0);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Filter() throws ParseException {
 /*@bgen(jjtree) Filter */
  Filter jjtn000 = new Filter(this, JJTFILTER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      jj_consume_token(0);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void RegularRuleRegion() throws ParseException {
 /*@bgen(jjtree) RegularRuleRegion */
  RegularRuleRegion jjtn000 = new RegularRuleRegion(this, JJTREGULARRULEREGION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(2)) {
        jj_consume_token(LBRACKET);
        jj_consume_token(regularRule);
        jj_consume_token(RBRACKET);
        jj_consume_token(CRLF);
      } else {
        ;
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CRLF:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        jj_consume_token(CRLF);
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case SWITCH:
        case agg:
        case order:
        case FUN_MAP_CALL_LITERAL:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_4;
        }
        Statement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void CycleRuleRegion() throws ParseException {
 /*@bgen(jjtree) CycleRuleRegion */
  CycleRuleRegion jjtn000 = new CycleRuleRegion(this, JJTCYCLERULEREGION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACKET);
      jj_consume_token(cycleRule);
      RegionProperty();
      jj_consume_token(RBRACKET);
      jj_consume_token(CRLF);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CRLF:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_5;
        }
        jj_consume_token(CRLF);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case SWITCH:
        case agg:
        case order:
        case FUN_MAP_CALL_LITERAL:
        case IDENTIFIER:
        case LBRACE:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_6;
        }
        Statement();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void RegionProperty() throws ParseException {
 /*@bgen(jjtree) RegionProperty */
  RegionProperty jjtn000 = new RegionProperty(this, JJTREGIONPROPERTY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(frequency);
      jj_consume_token(ASSIGNOP);
      StringLiteral();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*
 * Expression syntax follows.
 */
  final public void Expression() throws ParseException {
    OrExpression();
  }

  final public void OrExpression() throws ParseException {
 /*@bgen(jjtree) #OrExpression(> 1) */
  OrExpression jjtn000 = new OrExpression(this, JJTOREXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      AndExpression();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SC_OR:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_7;
        }
        jj_consume_token(SC_OR);
        AndExpression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
    }
    }
  }

  final public void AndExpression() throws ParseException {
 /*@bgen(jjtree) #AndExpression(> 1) */
  AndExpression jjtn000 = new AndExpression(this, JJTANDEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      RelationalExpression();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SC_AND:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        jj_consume_token(SC_AND);
        RelationalExpression();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
    }
    }
  }

  final public void RelationalExpression() throws ParseException {
 /*@bgen(jjtree) #RelationalExpression(> 1) */
 RelationalExpression jjtn000 = new RelationalExpression(this, JJTRELATIONALEXPRESSION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t = null;
    try {
      AddExpression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NATIONALOP:
        t = jj_consume_token(NATIONALOP);
                       jjtn000.setOperator(t.image);
        AddExpression();
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
    }
    }
  }

  final public void AddExpression() throws ParseException {
 Token t=null;
    MultiExpression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDOP:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_9;
      }
      t = jj_consume_token(ADDOP);
      MultiExpression();
                       AddExpression jjtn001 = new AddExpression(this, JJTADDEXPRESSION);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
      try {
                       jjtree.closeNodeScope(jjtn001,  2);
                       jjtc001 = false;
                       jjtn001.setOperator(t.image);
      } finally {
                       if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001,  2);
                       }
      }
    }
  }

  final public void MultiExpression() throws ParseException {
 Token t=null;
    UnaryExpression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIOP:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_10;
      }
      t = jj_consume_token(MULTIOP);
      UnaryExpression();
                       MultiExpression jjtn001 = new MultiExpression(this, JJTMULTIEXPRESSION);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
      try {
                       jjtree.closeNodeScope(jjtn001,  2);
                       jjtc001 = false;
                       jjtn001.setOperator(t.image);
      } finally {
                       if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001,  2);
                       }
      }
    }
  }

  final public void UnaryExpression() throws ParseException {
 /*@bgen(jjtree) #UnaryExpression( t != null) */
 UnaryExpression jjtn000 = new UnaryExpression(this, JJTUNARYEXPRESSION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNARYOP:
        t = jj_consume_token(UNARYOP);
                  jjtn000.setOperator(t.image);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      PrimaryExpression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000,  t != null);
    }
    }
  }

  final public void PrimaryExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
      NumberLiteral();
      break;
    case STRING_LITERAL:
      StringLiteral();
      break;
    case FALSE:
    case TRUE:
      BooleanLiteral();
      break;
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_2(2147483647)) {
        VariableLiteral();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
          jj_consume_token(LPAREN);
          Expression();
          jj_consume_token(RPAREN);
          break;
        default:
          jj_la1[13] = jj_gen;
          if (jj_2_3(2147483647)) {
            Function();
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case FUN_MAP_CALL_LITERAL:
              FunctionMapCall();
              break;
            case IDENTIFIER:
              Name();
              break;
            default:
              jj_la1[14] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
  }

  final public void VariableLiteral() throws ParseException {
 /*@bgen(jjtree) VariableLiteral */
        VariableLiteral jjtn000 = new VariableLiteral(this, JJTVARIABLELITERAL);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t = null ;
    try {
      jj_consume_token(LBRACE);
      t = jj_consume_token(IDENTIFIER);
                              jjtn000.setName(t.image); jjtn000.setBeginLine(t.beginLine); jjtn000.setBeginColumn(t.beginColumn);
      jj_consume_token(RBRACE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Function() throws ParseException {
 /*@bgen(jjtree) Function */
  Function jjtn000 = new Function(this, JJTFUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Name();
      jj_consume_token(LPAREN);
      ArgumentList();
      jj_consume_token(RPAREN);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
